Got the Kinect application up and running.  All it does for now is perform a big monolithic while loop, collecting all the frame data and ignoring it.  The skeletal tracking data is used to collect information about who's in the frame and it outputs the IDs of the skeletons it is tracking.  Also, it alerts the user when a new person enters the frame and when one exits.  Frame rate is dumped to show performance is not affected by serialization/deserialization.

--- a/src/Kinect/KinectInterp/KinectInterp.vcxproj.filters
+++ b/src/Kinect/KinectInterp/KinectInterp.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClInclude Include="KinectInterp.pb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
