Added a bunch of functions to the prototype Primitives learner. Renamed TAMER to Dummy, since it is just a blank test case while we further define the interfaces. Renamed Learner to Student, as we'll have other things with 'Learner' in the name, and it could get confusing. For all intents and purposes, you could think Learner==Robot, but we may do some virtual tests at some point that makes that too specific. Added the base QLearner interface for something that implements QLearning. Updated the test cases, though it doesn't link on my mac -- citing some 64-bit dependency issue.

--- a/src/Primitives/Learner/Makefile.inc
+++ b/src/Primitives/Learner/Makefile.inc
@@ -3,7 +3,7 @@ OBJDIRS += $(LOWERC_ROOT)/Learner
 TESTS += PrimitivesLearnerTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
-$(UPPERC_ROOT)_LEARNER_SRCS := $(LOWERC_ROOT)/Learner/Tamer.cc
+$(UPPERC_ROOT)_LEARNER_SRCS := $(LOWERC_ROOT)/Learner/Dummy.cc
 
 # Set makefile template specific vars
 UPPERC_DIR = $(UPPERC_ROOT)_LEARNER
