Updated doxygen documentation, created a utils test to test the logging, updated cpplint to avoid string arrays declared globally, updated the Makefile to compile for tests without sources, and moved the tests alongside the code as UnitTests (we will keep the Tests/ directory available for large-scale integration tests later)

--- a/src/Makefile
+++ b/src/Makefile
@@ -50,6 +50,7 @@ all:
 MAKEFILE_TEMPLATE := Makefile.template
 
 # Makefile fragments for library code
+include Common/Makefile.inc
 include Backend/Makefile.inc
 include Voice/Makefile.inc
 include Primitives/Makefile.inc
@@ -85,7 +86,7 @@ always:
 
 # make it so that no intermediate .o files are ever deleted
 .PRECIOUS: $(foreach dir, $(OBJDIRS), $(OBJDIR)/$(dir)/%.o) \
-           $(foreach dir, $(OBJDIRS), $(OBJDIR)/$(dir)/%Test.o) \
+           $(foreach dir, $(OBJDIRS), $(OBJDIR)/$(dir)/%UnitTest.o) \
            $(foreach dir, $(OBJDIRS), $(OBJDIR)/$(dir)/%.pb.cc) \
            $(foreach dir, $(OBJDIRS), $(OBJDIR)/$(dir)/%.pb.h)
 
