Updated the doxygen commenting to have two *'s on the bottom edge in all existing files (why so many are modified).  Also, changed the makefile and templating to incorporate protocol buffers.  Finally, created a sample protocol buffer that defines a primitive (which isn't fully fleshed out... but which we can build on and use this as the 'Primitive File Format').

--- a/src/Common/Makefile.inc
+++ b/src/Common/Makefile.inc
@@ -1,16 +1,21 @@
 # Modify global directives in global namespace
 OBJDIRS += Common
+OBJDIRS += Proto
 TESTS += CommonTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
-COMMON_SRCS :=
+COMMON_SRCS := Common/*.proto
 
 # Set makefile template specific vars
-UPPERC_DIR = COMMON
-LOWERC_DIR = Common
-EXECUTABLE =
-EXECUTABLE_OBJS =
-EXTRA_TEST_OBJS =
+UPPERC_DIR := COMMON
+LOWERC_DIR := Common
+
+SRC_LINKED_OBJECTS := $(OBJDIR)/Proto/%.cc
+
+EXECUTABLE :=
+EXECUTABLE_OBJS :=
+
+EXTRA_TEST_OBJS :=
 
 include $(MAKEFILE_TEMPLATE)
 
@@ -20,3 +25,10 @@ CommonTest: $(COMMON_TESTS)
 		echo == $$a ==; \
 		$(LDLIBPATH) $$a 2>$(LOGDIR)$${a#$(BINDIR)}; \
 	done
+
+# Wierd protobuf stuff for compilation
+$(OBJDIR)/Proto/%.o: $(OBJDIR)/Proto/%.pb.h
+$(OBJDIR)/Proto/%.pb.cc $(OBJDIR)/Proto/%.pb.h: Common/%.proto
+	@echo + protoc $<
+	@mkdir -p $(@D)
+	$(V)$(LDLIBPATH) $(PROTOCEXE) --proto_path=Common --cpp_out=$(OBJDIR)/Proto $<
