--- a/src/Primitives/Learner/Makefile.inc
+++ b/src/Primitives/Learner/Makefile.inc
@@ -6,11 +6,15 @@ TESTS += PrimitivesLearnerTest
 $(UPPERC_ROOT)_LEARNER_SRCS := $(LOWERC_ROOT)/Learner/Dummy.cc
 
 # Set makefile template specific vars
-UPPERC_DIR = $(UPPERC_ROOT)_LEARNER
-LOWERC_DIR = $(LOWERC_ROOT)/Learner
-EXECUTABLE =
-EXECUTABLE_OBJS =
-EXTRA_TEST_OBJS =
+UPPERC_DIR := $(UPPERC_ROOT)_LEARNER
+LOWERC_DIR := $(LOWERC_ROOT)/Learner
+
+SRC_LINKED_OBJECTS := 
+
+EXECUTABLE :=
+EXECUTABLE_OBJS :=
+
+EXTRA_TEST_OBJS :=
 
 include $(MAKEFILE_TEMPLATE)
 
