Updated the primitive proto to include a unique identifier.  Also, added functions to the Utils file to allow a user to ParseFromFile and SerializeToFile directly from a Primitive protobuf type (allowing us to gain essentially a nice storage layer without having to use nasty MySQL (thinking about moving this layer to a new file entitled Common/Serialization.h... but we'll see)

--- a/src/Common/Makefile.inc
+++ b/src/Common/Makefile.inc
@@ -1,6 +1,5 @@
 # Modify global directives in global namespace
 OBJDIRS += Common
-OBJDIRS += Proto
 TESTS += CommonTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
@@ -10,7 +9,7 @@ COMMON_SRCS := Common/*.proto
 UPPERC_DIR := COMMON
 LOWERC_DIR := Common
 
-SRC_LINKED_OBJECTS := $(OBJDIR)/Proto/%.cc
+SRC_LINKED_OBJECTS := $(OBJDIR)/Common/%.cc
 
 EXECUTABLE :=
 EXECUTABLE_OBJS :=
@@ -21,14 +20,16 @@ include $(MAKEFILE_TEMPLATE)
 
 # Directive to make the test case
 CommonTest: $(COMMON_TESTS)
+	@echo + Ensuring Database Storage Layer Exists...
+	@mkdir -p $(STORAGE)
 	@for a in $(COMMON_TESTS); do \
 		echo == $$a ==; \
 		$(LDLIBPATH) $$a 2>$(LOGDIR)$${a#$(BINDIR)}; \
 	done
 
 # Wierd protobuf stuff for compilation
-$(OBJDIR)/Proto/%.o: $(OBJDIR)/Proto/%.pb.h
-$(OBJDIR)/Proto/%.pb.cc $(OBJDIR)/Proto/%.pb.h: Common/%.proto
+$(OBJDIR)/Common/%.pb.o: $(OBJDIR)/Common/%.pb.h
+$(OBJDIR)/Common/%.pb.cc $(OBJDIR)/Common/%.pb.h: Common/%.proto
 	@echo + protoc $<
 	@mkdir -p $(@D)
-	$(V)$(LDLIBPATH) $(PROTOCEXE) --proto_path=Common --cpp_out=$(OBJDIR)/Proto $<
+	$(V)$(LDLIBPATH) $(PROTOCEXE) --proto_path=Common --cpp_out=$(OBJDIR)/Common $<
