--- a/src/Primitives/Learner/Makefile.inc
+++ b/src/Primitives/Learner/Makefile.inc
@@ -5,6 +5,7 @@ TESTS += PrimitivesLearnerTest
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
 $(UPPERC_ROOT)_LEARNER_SRCS := $(LOWERC_ROOT)/Learner/Dummy.cc
 $(UPPERC_ROOT)_LEARNER_SRCS += $(LOWERC_ROOT)/Learner/StandardQLearner.cc
+$(UPPERC_ROOT)_LEARNER_SRCS += $(LOWERC_ROOT)/Learner/QTable.cc
 
 # Set makefile template specific vars
 UPPERC_DIR := $(UPPERC_ROOT)_LEARNER
