--- a/src/Primitives/Makefile.inc
+++ b/src/Primitives/Makefile.inc
@@ -2,6 +2,5 @@ LOWERC_ROOT := Primitives
 UPPERC_ROOT := PRIMITIVES
 
 # Component fragments from */Makefile.inc
-include $(LOWERC_ROOT)/DataLoader/Makefile.inc
-include $(LOWERC_ROOT)/Learner/Makefile.inc
-include $(LOWERC_ROOT)/PostProcessor/Makefile.inc
+include $(LOWERC_ROOT)/Student/Makefile.inc
+include $(LOWERC_ROOT)/QLearner/Makefile.inc
