--- a/src/Primitives/Student/Makefile.inc
+++ b/src/Primitives/Student/Makefile.inc
@@ -3,18 +3,16 @@ OBJDIRS += $(LOWERC_ROOT)/Student
 TESTS += PrimitivesStudentTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
-$(UPPERC_ROOT)_STUDENT_SRCS := $(LOWERC_ROOT)/Student/Dummy.cc
+$(UPPERC_ROOT)_STUDENT_SRCS := $(LOWERC_ROOT)/Student/Dummy.cc \
+                               $(LOWERC_ROOT)/Student/FeedbackSensor.cc
+$(UPPERC_ROOT)_STUDENT_EXECUTABLES := 
 
 # Set makefile template specific vars
 UPPERC_DIR := $(UPPERC_ROOT)_STUDENT
 LOWERC_DIR := $(LOWERC_ROOT)/Student
 
-SRC_LINKED_OBJECTS := 
-
-EXECUTABLE :=
 EXECUTABLE_OBJS :=
-
-EXTRA_TEST_OBJS :=
+TEST_OBJS :=
 
 include $(MAKEFILE_TEMPLATE)
 
