--- a/src/Primitives/QLearner/Makefile.inc
+++ b/src/Primitives/QLearner/Makefile.inc
@@ -1,6 +1,6 @@
 # Modify global directives in global namespace
-OBJDIRS += $(LOWERC_ROOT)/QLearner
-TESTS += PrimitivesQLearnerTest
+OBJDIRS := $(OBJDIRS) $(LOWERC_ROOT)/QLearner
+TESTS   := $(TESTS)   $(LOWERC_ROOT)QLearnerTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
 $(UPPERC_ROOT)_QLEARNER_SRCS := $(LOWERC_ROOT)/QLearner/StandardQLearner.cc \
@@ -12,12 +12,12 @@ UPPERC_DIR := $(UPPERC_ROOT)_QLEARNER
 LOWERC_DIR := $(LOWERC_ROOT)/QLearner
 
 EXECUTABLE_OBJS :=
-TEST_OBJS :=
+TEST_OBJS       :=
 
 include $(MAKEFILE_TEMPLATE)
 
 # Directive to make the test case
-PrimitivesQLearnerTest: $($(UPPERC_ROOT)_QLEARNER_TESTS)
+$(LOWERC_ROOT)QLearnerTest: $($(UPPERC_ROOT)_QLEARNER_TESTS)
 	@for a in $(PRIMITIVES_QLEARNER_TESTS); do \
 		echo == $$a ==; \
 		$(LDLIBPATH) $$a 2>$(LOGDIR)$${a#$(BINDIR)}; \
