--- a/src/Common/Makefile.inc
+++ b/src/Common/Makefile.inc
@@ -3,7 +3,7 @@ OBJDIRS += Common
 TESTS += CommonTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
-COMMON_SRCS := Common/*.proto
+COMMON_SRCS :=
 COMMON_EXECUTABLES :=
 
 # Set makefile template specific vars
@@ -11,7 +11,7 @@ UPPERC_DIR := COMMON
 LOWERC_DIR := Common
 
 EXECUTABLE_OBJS :=
-TEST_OBJS :=
+TEST_OBJS := $(PROTO_OBJS)
 
 include $(MAKEFILE_TEMPLATE)
 
@@ -23,10 +23,3 @@ CommonTest: $(COMMON_TESTS)
 		echo == $$a ==; \
 		$(LDLIBPATH) $$a 2>$(LOGDIR)$${a#$(BINDIR)}; \
 	done
-
-# Weird protobuf stuff for compilation
-$(OBJDIR)/Common/%.pb.o: $(OBJDIR)/Common/%.pb.h
-$(OBJDIR)/Common/%.pb.cc $(OBJDIR)/Common/%.pb.h: Common/%.proto
-	@echo + protoc $<
-	@mkdir -p $(@D)
-	$(V)$(LDLIBPATH) $(PROTOCEXE) --proto_path=Common --cpp_out=$(OBJDIR)/Common $<
