Updated Makefile slightly to fix issues with linking multiple files with main() method.  Added a Signal library to smoothly handle signal interrupts in a program (i.e. Kinect data unit test).  Finally, did work on the FeedbackSesnsor and KinectSensor.  The lion's share of this commit is in the KinectSensor and KinectData proto which define how to get messages from the Kinect transmitted over TCP.  This currently works, but we still need to figure out how someone can easily and clearly access data from the KinectSensor when learning primitives.

--- a/src/Makefile
+++ b/src/Makefile
@@ -57,8 +57,8 @@ all:
 	@mkdir -p $(STORAGE)
 	
 # Perform doxygen every time, no matter what is called
-$(warning + doc $(DOXY_EXE) $(DOCDIR)/$(DOXY_CONF) > $(DOCOUT))
-$(shell cd $(DOCDIR); $(DOXY_EXE) $(DOXY_CONF))
+#$(warning + doc $(DOXY_EXE) $(DOCDIR)/$(DOXY_CONF) > $(DOCOUT))
+#$(shell cd $(DOCDIR); $(DOXY_EXE) $(DOXY_CONF))
 
 # We define a common "Makefrag"-style template so that we can just set dir
 # specific variables and include that template
