Made lots of changes to QLearner, QTable, and State classes, in preparation for the AAAI paper submission. Added the beginnings of a LBD student, that will use LBD-like techniques to learn skills from CSV file input. Added lots of helper functions to the various classes, but have yet to construct test cases for any of them.
Fixed a ton of lint errors, and (I suspect) will continue to be changing
the division of function locations -- governing which functions go in
which part of the architecture.

This commit is to be interpreted as incomplete but allows for compilation and
passes all existing tests.

--- a/src/Primitives/Student/Makefile.inc
+++ b/src/Primitives/Student/Makefile.inc
@@ -4,6 +4,7 @@ TESTS   := $(TESTS)   $(LOWERC_ROOT)StudentTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
 $(UPPERC_ROOT)_STUDENT_SRCS := $(LOWERC_ROOT)/Student/Dummy.cc \
+                               $(LOWERC_ROOT)/Student/LBDStudent.cc \
                                $(LOWERC_ROOT)/Student/FeedbackSensor.cc \
                                $(LOWERC_ROOT)/Student/KinectSensor.cc \
                                $(LOWERC_ROOT)/Student/CreateSensor.cc
