Updated AAAI makefile and added a lot to the bibliography.  Checking in version 1 of introduction.  We are now at 1.25 pages w/8 references.

--- a/papers/AAAI/Makefile
+++ b/papers/AAAI/Makefile
@@ -7,9 +7,10 @@ BIBTEX  := bibtex
 OUTPUT	:= output
 INTER   := $(OUTPUT)/intermediate
 FIGURES	:= figures
+STYLES  := styles
 
 # Collect the appropriate files for compilation
-STYLES  := $(wildcard *.sty)
+STYLES  := $(wildcard $(FIGURES)/*.sty $(FIGURES)/*.bst)
 SRCS    := $(wildcard *.tex *.cls)
 SRCS    += $(wildcard $(FIGURES)/*.eps)
 REFS    := $(wildcard *.bib)
@@ -26,8 +27,13 @@ $(REPORT).dvi: $(SRCS) $(REFS)
 $(REPORT).ps: $(REPORT).dvi
 	dvips -Pcmz -t letter $(INTER)/$(REPORT).dvi -o $(OUTPUT)/$(REPORT).ps
 
-pdf: $(REPORT).ps
-	ps2pdf $(OUTPUT)/$(REPORT).ps $(OUTPUT)/$(REPORT).pdf
+pdf:  $(SRCS) $(REFS)
+	@mkdir -p $(INTER)
+	@cp $(REFS) $(SRCS) $(STYLES) $(INTER)
+	@cd $(INTER); \
+		$(LATEX) $(REPORT); $(BIBTEX) $(REPORT); \
+		$(LATEX) $(REPORT); $(LATEX)  $(REPORT);
+	@cp $(INTER)/$(REPORT).pdf $(OUTPUT)
 
 without-display: pdf
 
