Finished out biblio based on references from Wiki and added a little bit to Background section. Also, put in a fix for makefile which allows it to make

--- a/papers/AAAI/Makefile
+++ b/papers/AAAI/Makefile
@@ -10,7 +10,7 @@ FIGURES	:= figures
 STYLES  := styles
 
 # Collect the appropriate files for compilation
-STYLES  := $(wildcard $(FIGURES)/*.sty $(FIGURES)/*.bst)
+STYLES  := $(wildcard $(STYLES)/*.sty $(STYLES)/*.bst)
 SRCS    := $(wildcard *.tex *.cls)
 SRCS    += $(wildcard $(FIGURES)/*.eps)
 REFS    := $(wildcard *.bib)
