Continued making lots of changes to the QLearner -- added sensor information to QTable class, and implemented a new LBDStudent that will generate an MDP if given a properly formatted data file. These MDPs, in the form of QLearner instantiations, can then be passed into the Observer for online recognition. Also changed the makefiles to prevent linker errors since some subdirectories require classes in other subdirectories.

--- a/src/Primitives/QLearner/Makefile.inc
+++ b/src/Primitives/QLearner/Makefile.inc
@@ -2,9 +2,9 @@
 OBJDIRS := $(OBJDIRS) $(LOWERC_ROOT)/QLearner
 TESTS   := $(TESTS)   $(LOWERC_ROOT)QLearnerTest
 
-# relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
-$(UPPERC_ROOT)_QLEARNER_SRCS := $(LOWERC_ROOT)/QLearner/StandardQLearner.cc \
-                                $(LOWERC_ROOT)/QLearner/QTable.cc
+# relative to $(TOP), i.e. $(LOWERC_DIR)/ *.cc
+$(UPPERC_ROOT)_QLEARNER_SRCS := $(LOWERC_ROOT)/QLearner/QTable.cc \
+                                $(LOWERC_ROOT)/QLearner/StandardQLearner.cc
 $(UPPERC_ROOT)_QLEARNER_EXECUTABLES :=
 
 # Set makefile template specific vars
