--- a/src/Primitives/Student/Makefile.inc
+++ b/src/Primitives/Student/Makefile.inc
@@ -2,7 +2,7 @@
 OBJDIRS := $(OBJDIRS) $(LOWERC_ROOT)/Student
 TESTS   := $(TESTS)   $(LOWERC_ROOT)StudentTest
 
-# relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
+# relative to $(TOP), i.e. $(LOWERC_DIR)/ *.cc
 $(UPPERC_ROOT)_STUDENT_SRCS := $(LOWERC_ROOT)/Student/Dummy.cc \
                                $(LOWERC_ROOT)/Student/LBDStudent.cc \
                                $(LOWERC_ROOT)/Student/FeedbackSensor.cc \
@@ -14,8 +14,9 @@ $(UPPERC_ROOT)_STUDENT_EXECUTABLES :=
 UPPERC_DIR := $(UPPERC_ROOT)_STUDENT
 LOWERC_DIR := $(LOWERC_ROOT)/Student
 
+
 EXECUTABLE_OBJS :=
-TEST_OBJS       := $(PROTO_OBJS)
+TEST_OBJS	:= $($(UPPERC_ROOT)_QLEARNER_OBJS) $(PROTO_OBJS)
 
 include $(MAKEFILE_TEMPLATE)
 
