Updated KinectSensor comments slightly because I was lazy last time.  Created a new Playback directory we can use for reading in file information.  Set up the actual sensor (except for small bits of important code :) ).

--- a/src/Observation/Makefile.inc
+++ b/src/Observation/Makefile.inc
@@ -2,5 +2,6 @@ LOWERC_ROOT := Observation
 UPPERC_ROOT := OBSERVATION
 
 # Component fragments from */Makefile.inc
-include $(LOWERC_ROOT)/Observer/Makefile.inc
+include $(LOWERC_ROOT)/Playback/Makefile.inc
 include $(LOWERC_ROOT)/Recognizer/Makefile.inc
+include $(LOWERC_ROOT)/Observer/Makefile.inc
