Updated sensor classes to not have const values because it causes a lot of wierdness that I was sick of working around.  Also, updated the Makefile to link the time libraries for the PlaybackSensor and updated Utils.h to fix some errors that could have occurred b/c of sloppy programming involving fopen().  Finally, finished PlaybackSensor class with unit test to prove it's validity.  All tests passed, lint errors fixed.

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,7 +45,7 @@ CXX       := g++
 CXXFLAGS  := -g -I$(PROTOB)/src -I$(GTEST)/include -Wall -Werror
 CXXFLAGS  += -I$(TOP) -I$(OBJDIR) -I$(PRIMDIR) -I$(OBSVDIR)
 MDFLAGS   := -MD
-LDFLAGS   := -lpthread -lgtest -L$(GTEST)/lib/.libs -lprotobuf -L$(PROTOB)/src/.libs
+LDFLAGS   := -lrt -lpthread -lgtest -L$(GTEST)/lib/.libs -lprotobuf -L$(PROTOB)/src/.libs
 LDLIBPATH := LD_LIBRARY_PATH=$(GTEST)/lib/.libs:$(PROTOB)/src/.libs
 
 # Lists that the */Makefile.inc makefile fragments will add to
