--- a/src/Primitives/Student/Makefile.inc
+++ b/src/Primitives/Student/Makefile.inc
@@ -8,15 +8,14 @@ $(UPPERC_ROOT)_STUDENT_SRCS := $(LOWERC_ROOT)/Student/Dummy.cc \
                                $(LOWERC_ROOT)/Student/FeedbackSensor.cc \
                                $(LOWERC_ROOT)/Student/KinectSensor.cc \
                                $(LOWERC_ROOT)/Student/CreateSensor.cc
-$(UPPERC_ROOT)_STUDENT_EXECUTABLES := 
+$(UPPERC_ROOT)_STUDENT_EXECUTABLES := $(LOWERC_ROOT)/Student/ASLDataCollector.cc
 
 # Set makefile template specific vars
 UPPERC_DIR := $(UPPERC_ROOT)_STUDENT
 LOWERC_DIR := $(LOWERC_ROOT)/Student
 
-
-EXECUTABLE_OBJS :=
-TEST_OBJS	:= $($(UPPERC_ROOT)_QLEARNER_OBJS) $(PROTO_OBJS)
+EXECUTABLE_OBJS := $($(UPPERC_ROOT)_QLEARNER_OBJS) $(PROTO_OBJS)
+TEST_OBJS	      := $($(UPPERC_ROOT)_QLEARNER_OBJS) $(PROTO_OBJS)
 
 include $(MAKEFILE_TEMPLATE)
 
