Fixed all crash level bugs in the recognition algorithm. Now just playing with parameters and computations to make it work.

--- a/src/Primitives/Makefile.inc
+++ b/src/Primitives/Makefile.inc
@@ -2,5 +2,7 @@ LOWERC_ROOT := Primitives
 UPPERC_ROOT := PRIMITIVES
 
 # Component fragments from */Makefile.inc
+include $(LOWERC_ROOT)/Exploration/Makefile.inc
 include $(LOWERC_ROOT)/QLearner/Makefile.inc
 include $(LOWERC_ROOT)/Student/Makefile.inc
+
