--- a/src/Primitives/QLearner/Makefile.inc
+++ b/src/Primitives/QLearner/Makefile.inc
@@ -12,7 +12,7 @@ UPPERC_DIR := $(UPPERC_ROOT)_QLEARNER
 LOWERC_DIR := $(LOWERC_ROOT)/QLearner
 
 EXECUTABLE_OBJS :=
-TEST_OBJS       :=
+TEST_OBJS       := $($(UPPERC_ROOT)_EXPLORATION_OBJS)
 
 include $(MAKEFILE_TEMPLATE)
 
