Skeleton for the IROS paper put in place with proper Makefile updates and styles to include

--- a/papers/IROS/Makefile
+++ b/papers/IROS/Makefile
@@ -1,15 +1,17 @@
 # Global configuration (report name, system path names)
 REPORT  := report
-LATEX   := latex
+LATEX   := latex --shell-escape
 BIBTEX  := bibtex
 
 # Directory structure for output
 OUTPUT	:= output
 INTER   := $(OUTPUT)/intermediate
 FIGURES	:= figures
+STYLES  := styles
 
 # Collect the appropriate files for compilation
-SRCS    := $(wildcard *.tex *.cls)
+STYLES  := $(wildcard $(STYLES)/*.sty $(STYLES)/*.bst $(STYLES)/*.cls)
+SRCS    := $(wildcard *.tex)
 SRCS    += $(wildcard $(FIGURES)/*.eps)
 REFS    := $(wildcard *.bib)
 
@@ -17,7 +19,7 @@ all: view
 
 $(REPORT).dvi: $(SRCS) $(REFS)
 	@mkdir -p $(INTER)
-	@cp $(REFS) $(SRCS) $(INTER)
+	@cp $(REFS) $(SRCS) $(STYLES) $(INTER)
 	@cd $(INTER); \
 		$(LATEX) $(REPORT); $(BIBTEX) $(REPORT); \
 		$(LATEX) $(REPORT); $(LATEX)  $(REPORT);
@@ -25,7 +27,7 @@ $(REPORT).dvi: $(SRCS) $(REFS)
 $(REPORT).ps: $(REPORT).dvi
 	dvips -Pcmz -t letter $(INTER)/$(REPORT).dvi -o $(OUTPUT)/$(REPORT).ps
 
-pdf: $(REPORT).ps
+pdf:  $(REPORT).ps
 	ps2pdf $(OUTPUT)/$(REPORT).ps $(OUTPUT)/$(REPORT).pdf
 
 without-display: pdf
