Added implementation of Variance-based changepoint detector along with Changepoint detector interface.

--- a/src/Observation/Makefile.inc
+++ b/src/Observation/Makefile.inc
@@ -5,3 +5,4 @@ UPPERC_ROOT := OBSERVATION
 include $(LOWERC_ROOT)/Playback/Makefile.inc
 include $(LOWERC_ROOT)/Observer/Makefile.inc
 include $(LOWERC_ROOT)/Recognizer/Makefile.inc
+include $(LOWERC_ROOT)/Changepoint/Makefile.inc
