Added Fixed-action-pattern code to get vector of motor states from a learned primitive action. Fixed a bug that was preventing the "score > 90%, learn extra hard" case from working. Made changes to LBDStudent to make noise application easier

--- a/src/Observation/Recognizer/Makefile.inc
+++ b/src/Observation/Recognizer/Makefile.inc
@@ -4,7 +4,9 @@ TESTS   := $(TESTS)   $(LOWERC_ROOT)RecognizerTest
 
 # relative to $(TOP), i.e. $(LOWERC_DIR)/*.cc
 $(UPPERC_ROOT)_RECOGNIZER_SRCS := 
-$(UPPERC_ROOT)_RECOGNIZER_EXECUTABLES := $(LOWERC_ROOT)/Recognizer/aaai12.cc
+$(UPPERC_ROOT)_RECOGNIZER_EXECUTABLES := $(LOWERC_ROOT)/Recognizer/aaai12.cc \
+					 $(LOWERC_ROOT)/Recognizer/iros12.cc
+
 
 # Set makefile template specific vars
 UPPERC_DIR := $(UPPERC_ROOT)_RECOGNIZER
